components/cartography/deployment/baremetal/neo4j-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: neo4j-ingress
  namespace: cartography
  annotations:
    kubernetes.io/ingress.class: haproxy
  labels:
    certmanager.k8s.io/provider: cluster
    cert-manager.io/provider: cluster
    app: cartography
    component: neo4j
spec:
  rules:
    # Replace with IP of host
    - host: neo4j.192.168.1.151.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: neo4j-service
              servicePort: 7474
  tls:
    - hosts:
        - neo4j.192.168.1.151.nip.io
      secretName: neo4j-web-tls

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: neo4j-ingress-bolt
  namespace: cartography
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
    # Replace with IP of host
    - host: bolt.192.168.1.151.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: neo4j-bolt-service
              servicePort: 7687
  tls:
    - hosts:
        - bolt.192.168.1.151.nip.io
      secretName: neo4j-web-tls
